modify autosave feature

--- a/app/assets/javascripts/templates/form.html.slim
+++ b/app/assets/javascripts/templates/form.html.slim
@@ -4,3 +4,5 @@
     .col-sm-4
       label Name
       input.form-control type="text" name="name" ng-model="post.name" ng-change="update()" autosave=""
+      label Description
+      input.form-control type="text" name="description" ng-model="post.description" ng-change="update()"
